[gd_scene load_steps=31 format=2]

[ext_resource path="res://DOM2.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/MainRoom.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Tiles/1920x1080-black-solid-color-background.jpg" type="Texture" id=4]
[ext_resource path="res://Scenes/Corpse.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/MainMenuEscape.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Portrait.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/InventoryNew.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Fire.tscn" type="PackedScene" id=11]
[ext_resource path="res://мемы/BTTjmMqBnnc.jpg" type="Texture" id=12]
[ext_resource path="res://мемы/0W78utpe-ls.jpg" type="Texture" id=13]
[ext_resource path="res://мемы/fJPEUXTMRKw.jpg" type="Texture" id=14]
[ext_resource path="res://мемы/tSBkmmVXUFw.jpg" type="Texture" id=15]
[ext_resource path="res://мемы/nVSduvZDD78.jpg" type="Texture" id=16]
[ext_resource path="res://мемы/hF0bXCgDJCQ.jpg" type="Texture" id=17]
[ext_resource path="res://мемы/3FYPzC5BWds.jpg" type="Texture" id=18]
[ext_resource path="res://мемы/UsSau3h4894.jpg" type="Texture" id=19]
[ext_resource path="res://Scenes/Window.tscn" type="PackedScene" id=20]
[ext_resource path="res://мемы/mXR4GIzX_JQ.jpg" type="Texture" id=21]
[ext_resource path="res://мемы/IbvwZpdrqMg.jpg" type="Texture" id=22]
[ext_resource path="res://мемы/Xdm12oVwnJg.jpg" type="Texture" id=23]
[ext_resource path="res://мемы/M2nN-8_JPwE.jpg" type="Texture" id=24]
[ext_resource path="res://мемы/sOjCXH-51Hs.jpg" type="Texture" id=25]
[ext_resource path="res://Light/16x16_FX_3.png" type="Texture" id=26]
[ext_resource path="res://Scenes/DoorUp.tscn" type="PackedScene" id=27]
[ext_resource path="res://Scenes/Lamp.tscn" type="PackedScene" id=28]
[ext_resource path="res://Scenes/Knife.tscn" type="PackedScene" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 65.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58, 16 )

[node name="PortraitRoom" type="Node2D"]
script = ExtResource( 2 )

[node name="Carpet" type="TileMap" parent="."]
scale = Vector2( 1.40136, 1.64 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( 2883716, 536870956, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="TileMap" type="TileMap" parent="YSort"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 1, 1 )
cell_y_sort = true
collision_layer = 0
format = 1
tile_data = PoolIntArray( -24379417, 23, 0, -24379392, 3, 0, -24379197, 3, 0, -24379002, 3, 0, -24378807, 3, 0, -24378612, 3, 0, -24378417, 3, 0, -24312686, 22, 0, -18742626, 28, 0, -15335348, 9, 0, -14155672, 14, 0, -13565977, 24, 0, -13303808, 2, 0, -13303613, 2, 0, -13303418, 2, 0, -13303223, 2, 0, -13303028, 2, 0, -13302833, 2, 0, -13171566, 21, 0, -10026312, 6, 0, -10026311, 6, 0, -8978192, 536870951, 0, -8191220, 50, 0, -7339789, 536870952, 0, -5569441, 536870948, 0, -2358126, 21, 0, -458777, 24, 0, 65535, 0, 0, 224, 0, 0, 449, 0, 0, 674, 0, 0, 899, 0, 0, 944, 0, 0, 2097882, 19, 0, 2950228, 45, 0, 3145727, 29, 0, 5112505, 10, 0, 8455314, 21, 0, 9371647, 29, 0, 10551295, 0, 0, 10485984, 0, 0, 10486209, 0, 0, 10486434, 0, 0, 10486659, 0, 0, 10486704, 0, 0, 12648423, 24, 0, 19268754, 21, 0, 21037055, 0, 0, 20971744, 0, 0, 20971969, 0, 0, 20972194, 0, 0, 20972419, 0, 0, 20972464, 0, 0, 25755623, 24, 0, 27722185, 13, 0, 28049966, 536870943, 0, 28246017, 47, 0, 29818855, 536870932, 0, 29754511, 536870932, 0, 31522815, 0, 0, 31457504, 0, 0, 31457729, 0, 0, 31457954, 0, 0, 31458179, 0, 0, 31458224, 0, 0, 32243701, 536870955, 0, 42008575, 16, 0, 41943087, 16, 0, 41943228, 16, 0, 41943369, 16, 0, 41943370, 16, 0, 41943509, 16, 0, 41943649, 16, 0, 41943790, 16, 0, 41943931, 16, 0, 41944068, 16, 0 )

[node name="Player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 748, 129 )
scale = Vector2( 3, 3 )
z_index = 2
speed = 250

[node name="Window" parent="YSort" instance=ExtResource( 20 )]
position = Vector2( 995, -154 )

[node name="Door" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 1132, 316 )
z_index = 2
flip_h = true

[node name="Area2D2" type="Area2D" parent="YSort/Door"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Door/Area2D2"]
position = Vector2( 34, 55.5 )
shape = SubResource( 1 )

[node name="Corpse" parent="YSort" instance=ExtResource( 5 )]
pause_mode = 2
light_mask = 2
position = Vector2( 757, 214 )
z_index = 2

[node name="Lamp" parent="YSort/Corpse" instance=ExtResource( 28 )]
position = Vector2( 51, -55 )

[node name="Stul" type="TileMap" parent="YSort"]
scale = Vector2( 1.7, 1.7 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( 14221372, 48, 0 )

[node name="1920X1080-black-solid-color-background" type="Sprite" parent="."]
position = Vector2( 585, 1314.75 )
scale = Vector2( 0.609375, 1.20694 )
z_index = 10
texture = ExtResource( 4 )

[node name="1920X1080-black-solid-color-background2" type="Sprite" parent="."]
position = Vector2( 675, 186 )
scale = Vector2( 1.84635, 2.46921 )
z_index = -3
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuEscape" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="InventoryNew" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="Fire" parent="." instance=ExtResource( 11 )]
pause_mode = 2
position = Vector2( 775, -35 )

[node name="эуэуэаэывэаы" type="Node" parent="."]

[node name="NVSduvZdd78" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( 1630, -10349.4 )
scale = Vector2( 34.6204, 25.9988 )
texture = ExtResource( 16 )

[node name="0W78Utpe-ls" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( -39125, -16625 )
scale = Vector2( 158.622, 190.773 )
texture = ExtResource( 13 )

[node name="3fypzC5bWds" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( 2181, 25144 )
scale = Vector2( 144.724, 47.3396 )
texture = ExtResource( 18 )

[node name="TSBkmmVxufw" type="Sprite" parent="эуэуэаэывэаы/3fypzC5bWds"]
position = Vector2( -756.424, -1602.54 )
scale = Vector2( 1, 2.7647 )
texture = ExtResource( 15 )

[node name="BtTjmMqBnnc" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( 53829, 7224 )
scale = Vector2( 56.9872, 46.8667 )
texture = ExtResource( 12 )

[node name="FJpeuxtmrkw" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( 32005, -52040 )
scale = Vector2( 117, 121.889 )
texture = ExtResource( 14 )

[node name="HF0bXcgDjcq" type="Sprite" parent="эуэуэаэывэаы/FJpeuxtmrkw"]
position = Vector2( -862.193, 629.982 )
scale = Vector2( 2.60447, 1.68183 )
texture = ExtResource( 17 )

[node name="UsSau3H4894" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( -35256, -50981 )
scale = Vector2( 74.4815, 51.9401 )
texture = ExtResource( 19 )

[node name="Xdm12oVwnJg" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( -5216, -35905 )
scale = Vector2( 31.5778, 28.7129 )
texture = ExtResource( 23 )

[node name="MXr4gizXJq" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( 60117, 47039 )
scale = Vector2( 38.8, 28.5592 )
texture = ExtResource( 21 )

[node name="IbvwZpdrqMg" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( -47649.5, -84185 )
scale = Vector2( 31.0684, 29.75 )
texture = ExtResource( 22 )

[node name="SOjCxh-51Hs" type="Sprite" parent="эуэуэаэывэаы"]
position = Vector2( -139450, 19203 )
rotation = -3.14159
scale = Vector2( 280.467, 193.996 )
texture = ExtResource( 25 )
flip_h = true
flip_v = true

[node name="M2nN-8JpwE" type="Sprite" parent="."]
position = Vector2( -7352, -94834 )
scale = Vector2( 96.9428, 60.4183 )
texture = ExtResource( 24 )

[node name="Lights" type="Node" parent="."]

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( 997, -82.2968 )
scale = Vector2( 15.5156, 26.9629 )
texture = ExtResource( 26 )
color = Color( 0.12549, 0.341176, 0.541176, 1 )
shadow_enabled = true
shadow_filter = 5
shadow_filter_smooth = 11.1

[node name="Light2D2" type="Light2D" parent="Lights"]
position = Vector2( 156, -49.1016 )
scale = Vector2( 15.5156, 22.7627 )
texture = ExtResource( 26 )
color = Color( 0.12549, 0.341176, 0.541176, 1 )
shadow_enabled = true
shadow_filter = 5
shadow_filter_smooth = 11.1

[node name="Portrait" parent="." instance=ExtResource( 9 )]
position = Vector2( 573, -108 )

[node name="DoorUp" parent="." instance=ExtResource( 27 )]
position = Vector2( 430, -74 )

[node name="Area2D2" type="Area2D" parent="DoorUp"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorUp/Area2D2"]
position = Vector2( -1, 6 )
shape = SubResource( 2 )

[node name="Knife" parent="." instance=ExtResource( 29 )]
position = Vector2( 829, 306 )
z_index = 1

[connection signal="body_entered" from="YSort/Door/Area2D2" to="." method="_on_Door_entered"]
[connection signal="body_entered" from="DoorUp/Area2D2" to="." method="_on_Door2_entered"]
